{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Editor",
            "id": "bd0e7602-52d3-48ce-9508-ed8cd75d35a1",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Value",
                    "id": "897d51c8-a9b0-4665-ba3e-3fd4c80903b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "41b4819e-b5d8-4f07-ad47-12c3c2cf90a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomCamera",
                    "type": "PassThrough",
                    "id": "68e1eb6e-429a-4236-a0cf-0a69578e4172",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "95b59281-e765-4d2b-9c2f-511503878c8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "RightMouseClick",
                    "id": "3c937a4d-5f80-411a-859d-bfc77b4906b5",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "770f001d-f0e8-40aa-99b7-6e5cbde2e4d4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "47d9f01c-d876-47a3-9873-4318e64030a5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftMouseClick",
                    "id": "a880eaaa-5378-4a4e-9033-57fc4aee6af2",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "2d379dc0-6d51-49e2-bc7a-93a30f1bd4c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "c7910ec7-a926-491b-bd13-166eae14b217",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "21cf4a34-4749-4c16-8d6f-10a7ee93b0e6",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31fb1041-fabd-4ae8-9b38-a2f8f76f8eff",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}